--- a/modules/ROOT/pages/vite-es6-npm.adoc
+++ b/modules/ROOT/pages/vite-es6-npm.adoc
@@ -15,7 +15,7 @@ This guide requires the following:
 
 * Node.js and npm.
 * Basic knowledge of how to use https://vitejs.dev[Vite].
-* (Optional: For premium features) The latest premium .zip bundle of TinyMCE for including premium plugins.
+* (Optional: For premium features) The latest premium .zip bundle of TinyMCE that includes premium plugins.
 
 == Procedure
 
