--- a/modules/ROOT/pages/vite-es6-npm.adoc
+++ b/modules/ROOT/pages/vite-es6-npm.adoc
@@ -17,7 +17,7 @@ This guide requires the following:
 * Basic knowledge of how to use https://vitejs.dev[Vite].
 * (Optional: For premium features) The latest premium .zip bundle of TinyMCE that includes premium plugins.
 
-== Procedure
+== Procedures
 
 :is_zip_install: vite
 // use new vite dev-dependencies
