--- a/modules/ROOT/pages/vite-es6-npm.adoc
+++ b/modules/ROOT/pages/vite-es6-npm.adoc
@@ -47,7 +47,7 @@ include::partial$module-loading/bundling-vite-es6-npm.config.adoc[]
 </html>
 ----
 +
-. Run vite in dev mode to test the application, such as:
+. Run vite in dev mode to test the application
 +
 [source,sh]
 ----
