--- a/modules/ROOT/pages/vite-es6-npm.adoc
+++ b/modules/ROOT/pages/vite-es6-npm.adoc
@@ -56,7 +56,7 @@ npm run
 +
 . If Vite
 .. **runs** successfully, check that the editor loads in the application.
-.. **fails**, review any errors and review the configuration changes in this procedure; you may need to adjust for conflicts or other issues when bundling {productname} into an existing project.
+.. **fails**, review any errors and the configuration changes in this procedure; you may need to adjust for conflicts or other issues when bundling {productname} into an existing project.
 . Run vite in production mode to generate the bundle such as:
 +
 [source,sh]
