--- a/modules/ROOT/pages/ai-proxy.adoc
+++ b/modules/ROOT/pages/ai-proxy.adoc
@@ -80,7 +80,7 @@ To prevent this, a moderation service can pre-filter abusive content and reject 
 
 Below is a flow diagram that illustrates how the above components work together to provide the AI enhanced experience.
 
-image::{imagesdir}/ai-plugin/ai-proxy-call-flows.png[OpenAI Proxy Call Flows]
+image::ai-plugin/ai-proxy-call-flows.png[OpenAI Proxy Call Flows]
 
 == Example Reference Application
 
