--- a/modules/ROOT/pages/accordion.adoc
+++ b/modules/ROOT/pages/accordion.adoc
@@ -9,7 +9,7 @@
 
 include::partial$misc/admon-requires-6.5v.adoc[]
 
-The Accordion plugin allows for the creation of sections in a document that can be expanded or collapsed to show or hide additional content.
+The {pluginname} plugin allows for the creation of sections in a document that can be expanded or collapsed to show or hide additional content.
 
 == Interactive example
 
