--- a/modules/ROOT/partials/configuration/dialog_persistent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_persistent.adoc
@@ -52,7 +52,7 @@ To prevent this
 
 * add a check that the dialog is already open; and
 
-* use the xref:apis/tinymce.editor/#focus[`focus`] method in the xref:apis/tinymce.windowmanager/#return-value[`DialogInstanceAPI`] to transfer focus to the open dialog rather than creating a new instance of the same dialog.
+* use the `focus` method in the xref:apis/tinymce.windowmanager.adoc#open[`DialogInstanceAPI`] to transfer focus to the open dialog rather than creating a new instance of the same dialog.
 
 
 [source,js]
