--- a/modules/ROOT/pages/cloud-troubleshooting.adoc
+++ b/modules/ROOT/pages/cloud-troubleshooting.adoc
@@ -8,7 +8,7 @@ When {cloudname} detects a problem, it will show an editor notification containi
 NOTE: The wording of the notifications shown here may differ from the actual notifications from {cloudname}.
 
 [[A-valid-API-key-is-required-starting-2024-to-continue-using-TinyMCE.-Please-alert-your-admin-to-check-the-current-API-key-1.]]
-== "A valid API key is required, starting 2024, to continue using TinyMCE. Please alert your admin to check the current API key."
+== "A valid API key is required, starting 2024, to continue using TinyMCE. Please alert your admin to sign-up to get your free API key"
 
 === Cause
 
