DOC-2223: TinyMCE 6.8.1 community release. (#3013)
* DOC-2223: TinyMCE 6.8.1 community release specific entries.

* Update changelog.md

* Update modules/ROOT/pages/changelog.adoc

* DOC-2223: api-version bump for tinymce 6.8.1 community rc.

--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,15 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.8.1 - 2023-11-29
+
+=== Improved
+* Colorpicker now includes the Brightness/Saturation selector and hue slider in the keyboard navigable items.
+
+=== Fixed
+* The functions `schema.isWrapper` and `schema.isInline` did not exclude node names that started with `#` which should not be considered as elements. 
+* Translation syntax for announcement text in the table grid was incorrectly formatted.
+
 == 6.8.0 - 2023-11-22
 
 === Added
