DOC-2216: add new single `js` bundling feature example for `Bundling an npm version of TinyMCE with ES6 and Vite`. (#3010)
* DOC-2216: add new single  bundling feature example for .

* DOC-2216: fix rel path for bundling-vite-es6-npm.config.adoc.

* DOC-2216: update , remove  in shell commands, update scaffolding commands.

* Update modules/ROOT/pages/vite-es6-npm.adoc

* Update modules/ROOT/pages/vite-es6-npm.adoc

* Update modules/ROOT/pages/vite-es6-npm.adoc

* Update modules/ROOT/pages/vite-es6-npm.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/vite-es6-npm.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/vite-es6-npm.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/vite-es6-npm.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/vite-es6-npm.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* DOC-2216: various updates including;
naming convention update for file
update sh commands
included example for importing premium skins

* Update modules/ROOT/pages/vite-es6-npm.adoc

---------

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -195,6 +195,8 @@
 **** xref:webpack-cjs-npm.adoc[CommonJS and npm]
 **** xref:webpack-es6-download.adoc[ES6 and a .zip archive]
 **** xref:webpack-cjs-download.adoc[CommonJS and a .zip archive]
+*** Vite
+**** xref:vite-es6-npm.adoc[ES6 and npm]
 *** Rollup.js
 **** xref:rollup-es6-npm.adoc[ES6 and npm]
 **** xref:rollup-es6-download.adoc[ES6 and a .zip archive]
