DOC-2215: add new feature  to 6.8 release project for AdvTemplate. (#2985)
* DOC-2215: add new feature  to 6.8 release project for AdvTemplate.

* DOC-2215: add mce-clipboard demo to advanced tempaltes new feature sub-section.

* Update modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* DOC-2215: updated demo files to remove template categories.

* Update modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html

* Update modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/pages/advanced-templates.adoc

* DOC-2215: update demo and js.

* Update index.html

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* DOC-2215: correcting index.js backslash  for antora syntax.

* DOC-2215: updating with new {{prefix}}mce-clipboard{{suffix}} tags for antora to render correctly in live-demos.

* Update index.html

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update index.html

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update index.html

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

---------

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -151,6 +151,19 @@ Also, and as shown in the interactive demonstration below, the xref:mergetags.ad
 liveDemo::{plugincode}-insertionpoint[]
 
 
+[[the-mce-clipboard-marker]]
+=== The mce-clipboard marker
+
+include::partial$misc/admon-requires-6.8v.adoc[]
+
+The `+{{mce-clipboard}}+` marker is a fixed string for adding to any template.
+
+The string to add is as follows: `+{{mce-clipboard}}+`.
+
+Whenever a user inserts a template containing the `+{{mce-clipboard}}+` marker, the editor will replace those markers with the actual content from the clipboard.
+
+liveDemo::{plugincode}-mce-clipboard[]
+
 [[options]]
 == Options
 
