--- a/modules/ROOT/pages/6.8.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.8.1-release-notes.adoc
@@ -544,3 +544,13 @@ In {productname} 6.7.0, each cell in the table grid menu item was updated so tha
 In {productname} 6.8.1.0 translations were added for this text, though this announcement was still only available in English as the syntax used for the table grid announcement text in detecting strings which are to be translated was invalid.
 
 {productname} 6.8.1.1 addresses this, now, the syntax has been corrected and each cell in the table grid announces the current selected columns and rows in the correct language, _not only_ in English.
+
+=== The functions schema.isWrapper and schema.isInline didn't exclude element names that started with # those should not be considered elements.
+// #TINY-10385
+Previously the `schema.isInline` and `schema.isWrapper`, would also consider elements such as `#text` as `valid_elements`.
+
+As a consequence, in some cases the editor would try to append an element inside a `#text` element, which is forbidden.
+
+{productname} 6.8.1 addresses this issue, now, the `schema.isInline` and schema.isWrapper exclude elements when there name starts with `#` such as: `#text` and `#comment`.
+
+As a result, these elements are no longer considered as a valid wrapper, and can no longer append an element inside of elements such as these.
